// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<alert> demo: render [action] correctly 1`] = `
"<div class=\\"arco-space arco-space-vertical\\" style=\\"width: 100%;\\">
  <!---->
  <div class=\\"arco-space-item\\" style=\\"margin-bottom: 24px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\"> This is an info alert. </div>
        </div>
        <div class=\\"arco-alert-action\\"><button class=\\"arco-btn arco-btn-primary arco-btn-shape-square arco-btn-size-small arco-btn-status-normal\\" type=\\"button\\">
            <!--v-if-->Detail
          </button></div>
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"><span class=\\"arco-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <!---->
  <div class=\\"arco-space-item\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info arco-alert-with-title\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\">Example</div>
          <div class=\\"arco-alert-content\\"> This is an info alert. </div>
        </div>
        <div class=\\"arco-alert-action\\"><button class=\\"arco-btn arco-btn-primary arco-btn-shape-square arco-btn-size-small arco-btn-status-normal\\" type=\\"button\\">
            <!--v-if-->Detail
          </button></div>
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"><span class=\\"arco-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`<alert> demo: render [banner] correctly 1`] = `
"<transition-stub>
  <div role=\\"alert\\" class=\\"arco-alert arco-alert-info arco-alert-banner arco-alert-center\\">
    <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
        <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
      </svg></div>
    <div class=\\"arco-alert-body\\">
      <!--v-if-->
      <div class=\\"arco-alert-content\\">This is an info alert.</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>"
`;

exports[`<alert> demo: render [basic] correctly 1`] = `
"<transition-stub>
  <div role=\\"alert\\" class=\\"arco-alert arco-alert-info\\">
    <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
        <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
      </svg></div>
    <div class=\\"arco-alert-body\\">
      <!--v-if-->
      <div class=\\"arco-alert-content\\">This is an info alert.</div>
    </div>
    <!--v-if-->
    <!--v-if-->
  </div>
</transition-stub>"
`;

exports[`<alert> demo: render [closable] correctly 1`] = `
"<div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"margin: -10px -20px -10px -20px;\\">
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an info alert.</div>
        </div>
        <!--v-if-->
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"><span class=\\"arco-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-success\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-check-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0l11.5-11.5Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an success alert.</div>
        </div>
        <!--v-if-->
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"><span class=\\"arco-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-warning arco-alert-with-title\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-exclamation-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2Zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V15Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\"> Warning </div>
          <div class=\\"arco-alert-content\\"> This is an warning alert. </div>
        </div>
        <!--v-if-->
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"><span class=\\"arco-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-error arco-alert-with-title\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm4.955-27.771-4.95 4.95-4.95-4.95a1 1 0 0 0-1.414 0l-1.414 1.414a1 1 0 0 0 0 1.414l4.95 4.95-4.95 4.95a1 1 0 0 0 0 1.414l1.414 1.414a1 1 0 0 0 1.414 0l4.95-4.95 4.95 4.95a1 1 0 0 0 1.414 0l1.414-1.414a1 1 0 0 0 0-1.414l-4.95-4.95 4.95-4.95a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\"> Error </div>
          <div class=\\"arco-alert-content\\"> This is an error alert. </div>
        </div>
        <!--v-if-->
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"><span class=\\"arco-icon-hover\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\"><path d=\\"M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142\\"></path></svg></span></div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`<alert> demo: render [close-element] correctly 1`] = `
"<div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"margin: -10px -20px -10px -20px;\\">
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\"> This is an info alert. </div>
        </div>
        <!--v-if-->
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close-circle\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path d=\\"m17.643 17.643 6.364 6.364m0 0 6.364 6.364m-6.364-6.364 6.364-6.364m-6.364 6.364-6.364 6.364M42 24c0 9.941-8.059 18-18 18S6 33.941 6 24 14.059 6 24 6s18 8.059 18 18Z\\"></path>
          </svg></div>
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\"> This is an info alert. </div>
        </div>
        <!--v-if-->
        <div tabindex=\\"-1\\" role=\\"button\\" aria-label=\\"Close\\" class=\\"arco-alert-close-btn\\"> Close </div>
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`<alert> demo: render [icon] correctly 1`] = `
"<div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"margin: -10px -20px -10px -20px;\\">
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info\\">
        <!--v-if-->
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an info alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-success\\">
        <!--v-if-->
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an success alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-warning arco-alert-with-title\\">
        <!--v-if-->
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\"> Warning </div>
          <div class=\\"arco-alert-content\\"> This is an warning alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-error arco-alert-with-title\\">
        <!--v-if-->
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\"> Error </div>
          <div class=\\"arco-alert-content\\"> This is an error alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`<alert> demo: render [title] correctly 1`] = `
"<div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"margin: -10px -20px -10px -20px;\\">
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info arco-alert-with-title\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\">Info</div>
          <div class=\\"arco-alert-content\\">This is an info alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-success arco-alert-with-title\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-check-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0l11.5-11.5Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\">Success</div>
          <div class=\\"arco-alert-content\\">This is an success alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-warning arco-alert-with-title\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-exclamation-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2Zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V15Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\"> Warning </div>
          <div class=\\"arco-alert-content\\"> This is an warning alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-error arco-alert-with-title\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm4.955-27.771-4.95 4.95-4.95-4.95a1 1 0 0 0-1.414 0l-1.414 1.414a1 1 0 0 0 0 1.414l4.95 4.95-4.95 4.95a1 1 0 0 0 0 1.414l1.414 1.414a1 1 0 0 0 1.414 0l4.95-4.95 4.95 4.95a1 1 0 0 0 1.414 0l1.414-1.414a1 1 0 0 0 0-1.414l-4.95-4.95 4.95-4.95a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <div class=\\"arco-alert-title\\"> Error </div>
          <div class=\\"arco-alert-content\\"> This is an error alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
</div>"
`;

exports[`<alert> demo: render [type] correctly 1`] = `
"<div class=\\"arco-row arco-row-align-start arco-row-justify-start\\" style=\\"margin: -10px -20px -10px -20px;\\">
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-info\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-info-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm2-30a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2Zm0 17h1a1 1 0 0 1 1 1v2a1 1 0 0 1-1 1h-6a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h1v-8a1 1 0 0 1-1-1v-2a1 1 0 0 1 1-1h3a1 1 0 0 1 1 1v11Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an info alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-success\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-check-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm10.207-24.379a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0L22 26.172l-4.878-4.88a1 1 0 0 0-1.415 0l-1.414 1.415a1 1 0 0 0 0 1.414l7 7a1 1 0 0 0 1.414 0l11.5-11.5Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an success alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-warning\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-exclamation-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2Zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V15Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an warning alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-error\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-close-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm4.955-27.771-4.95 4.95-4.95-4.95a1 1 0 0 0-1.414 0l-1.414 1.414a1 1 0 0 0 0 1.414l4.95 4.95-4.95 4.95a1 1 0 0 0 0 1.414l1.414 1.414a1 1 0 0 0 1.414 0l4.95-4.95 4.95 4.95a1 1 0 0 0 1.414 0l1.414-1.414a1 1 0 0 0 0-1.414l-4.95-4.95 4.95-4.95a1 1 0 0 0 0-1.414l-1.414-1.414a1 1 0 0 0-1.414 0Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\">This is an error alert.</div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
  <div class=\\"arco-col arco-col-12\\" style=\\"padding: 10px 20px 10px 20px;\\">
    <transition-stub>
      <div role=\\"alert\\" class=\\"arco-alert arco-alert-normal\\">
        <div class=\\"arco-alert-icon\\"><svg viewBox=\\"0 0 48 48\\" fill=\\"none\\" xmlns=\\"http://www.w3.org/2000/svg\\" stroke=\\"currentColor\\" class=\\"arco-icon arco-icon-exclamation-circle-fill\\" stroke-width=\\"4\\" stroke-linecap=\\"butt\\" stroke-linejoin=\\"miter\\">
            <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M24 44c11.046 0 20-8.954 20-20S35.046 4 24 4 4 12.954 4 24s8.954 20 20 20Zm-2-11a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v2Zm4-18a1 1 0 0 0-1-1h-2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1V15Z\\" fill=\\"currentColor\\" stroke=\\"none\\"></path>
          </svg></div>
        <div class=\\"arco-alert-body\\">
          <!--v-if-->
          <div class=\\"arco-alert-content\\"> This is an normal alert. </div>
        </div>
        <!--v-if-->
        <!--v-if-->
      </div>
    </transition-stub>
  </div>
</div>"
`;
